# megaman

./: MANIFEST.in  pyproject.toml  setup.py
src/megaman/: __init__.py
src/megaman.egg-info/: PKG-INFO  SOURCES.txt
src/megaman/datasets/: __init__.py  datasets.py
src/megaman/embedding/: base.py  isomap.py  locally_linear.py  ltsa.py  spectral_embedding.py
src/megaman/geometry/: __init__.py  adjacency.py  affinity.py  geometry.py  rmetric.py
src/megaman/ies/: __init__.py  coord_search.py  regu_path.py  utils.py
src/megaman/plotter/: __init__.py  covar_plotter3.py  plotter.py
src/megaman/relaxation/: optimizer.py  riemannian_relaxation.py  trace_variable.py  utils.py
src/megaman/utils/: analyze_dimension_and_radius.py  covar_plotter.py  eigendecomp.py  estimate_radius.py  k_means_clustering.py  large_sparse_functions.py  spectral_clustering.py  testing.py  validation.py
tests/tests_embeddings/: test_base.py  test_embeddings.py  test_isomap.py  test_lle.py  test_ltsa.py  test_spectral_embedding.py
tests/tests_geometry/: test_adjacency.py  test_affinity.py  test_geometry.py  test_laplacian.py  test_rmetric.py
tests/tests_relaxation/: test_precomputed_S.py  test_precomputed_Y.py  test_regression_test.py  test_relaxation_keywords.py  test_tracing_var.py  utils.py
tests/tests_utils/: test_analyze_dimension_and_radius.py  test_eigendecomp.py  test_estimate_radius.py  test_spectral_clustering.py  test_testing.py  test_validation.py
